--- a/README
+++ b/README
@@ -1,4 +1,3 @@
 TSB 2012
-Author: Xinyu Lin (xinyulin701@gmail.com)
 
-Blood vessel segmentation based on Mean Shift 
+Blood vessel segmentation based on Mean Shift (EDISON: http://coewww.rutgers.edu/riul/research/papers/abstract/segedge.html)
